fixing the navbar alignement

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -36,7 +36,7 @@ body {
 
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     padding: 12px 16px;
 }
 
@@ -44,4 +44,6 @@ nav ul {
     display: inline-flex;
     gap: 20px;
     list-style-type: none;
+    margin-right: auto;  /* push all the way to the right  */
 }
+
